--- a/DWDImport/src/DWDMainWindow.ui
+++ b/DWDImport/src/DWDMainWindow.ui
@@ -29,31 +29,21 @@
          <string>Location</string>
         </property>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="0">
-          <widget class="QLabel" name="label_2">
-           <property name="text">
-            <string>Latitude:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="3">
+         <item row="2" column="3">
           <widget class="QLabel" name="label_5">
            <property name="text">
             <string>Deg</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="1" colspan="2">
-          <widget class="QtExt::ValidatingLineEdit" name="lineEditLongitude">
-           <property name="maximumSize">
-            <size>
-             <width>250</width>
-             <height>16777215</height>
-            </size>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>Latitude:</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1" colspan="2">
+         <item row="2" column="1" colspan="2">
           <widget class="QtExt::ValidatingLineEdit" name="lineEditLatitude">
            <property name="maximumSize">
             <size>
@@ -63,26 +53,59 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_3">
-           <property name="text">
-            <string>Longitude:</string>
-           </property>
-          </widget>
+         <item row="0" column="1" colspan="2">
+          <widget class="QLineEdit" name="lineEditNameFilter"/>
          </item>
-         <item row="1" column="3">
+         <item row="4" column="3">
           <widget class="QLabel" name="label_4">
            <property name="text">
             <string>Deg</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="0" colspan="4">
+         <item row="4" column="0">
+          <widget class="QLabel" name="label_3">
+           <property name="text">
+            <string>Longitude:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1" colspan="2">
+          <widget class="QtExt::ValidatingLineEdit" name="lineEditLongitude">
+           <property name="maximumSize">
+            <size>
+             <width>250</width>
+             <height>16777215</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_8">
+           <property name="text">
+            <string>Filter Name:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0" colspan="4">
           <widget class="QPushButton" name="pushButtonMap">
            <property name="text">
             <string>pick Location</string>
            </property>
           </widget>
+         </item>
+         <item row="6" column="0">
+          <spacer name="verticalSpacer_4">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </widget>
@@ -104,19 +127,6 @@
           <widget class="QRadioButton" name="radioButtonHistorical">
            <property name="text">
             <string>historical</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1" colspan="2">
-          <widget class="QtExt::ValidatingLineEdit" name="lineEditYear">
-           <property name="maximumSize">
-            <size>
-             <width>250</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>2019</string>
            </property>
           </widget>
          </item>
@@ -146,30 +156,25 @@
            </property>
           </spacer>
          </item>
+         <item row="1" column="1" colspan="2">
+          <widget class="QComboBox" name="comboBoxYear"/>
+         </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QGroupBox" name="groupBox_2">
+        <property name="maximumSize">
+         <size>
+          <width>350</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="title">
-         <string>Max Distance </string>
+         <string>Distance </string>
         </property>
         <layout class="QGridLayout" name="gridLayout_3">
-         <item row="0" column="1">
-          <widget class="QtExt::ValidatingLineEdit" name="lineEditDistance">
-           <property name="text">
-            <string>10</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0">
-          <widget class="QLabel" name="label_6">
-           <property name="text">
-            <string>Max Distance </string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
+         <item row="2" column="2">
           <spacer name="verticalSpacer_3">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -183,9 +188,39 @@
           </spacer>
          </item>
          <item row="0" column="2">
+          <widget class="QtExt::ValidatingLineEdit" name="lineEditDistance">
+           <property name="text">
+            <string>10</string>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="3">
           <widget class="QLabel" name="label_7">
            <property name="text">
             <string>km</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_6">
+           <property name="text">
+            <string>Max Distance: </string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0" colspan="3">
+          <widget class="QSlider" name="horizontalSliderDistance">
+           <property name="maximum">
+            <number>500</number>
+           </property>
+           <property name="value">
+            <number>50</number>
+           </property>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
@@ -193,17 +228,14 @@
        </widget>
       </item>
       <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+       <widget class="QwtPlot" name="tempPlot" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
+       </widget>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout">
@@ -219,6 +251,13 @@
            </size>
           </property>
          </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButtonPreview">
+          <property name="text">
+           <string>Preview Data</string>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QPushButton" name="pushButtonDownload">
@@ -256,6 +295,12 @@
    <class>QtExt::ValidatingLineEdit</class>
    <extends>QLineEdit</extends>
    <header>QtExt_ValidatingLineEdit.h</header>
+  </customwidget>
+  <customwidget>
+   <class>QwtPlot</class>
+   <extends>QWidget</extends>
+   <header location="global">qwt_plot.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
